# drako

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/: drako-scan.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
benchmarks/: README.md  bench_discovery.py  bench_policy_engine.py  run_all.py
data/: ecosystem_index.json
deploy/helm/drako-proxy/: Chart.yaml  values.yaml
docs/: ARCHITECTURE.md  abss-format.md  desktop-scanning.md  observability.md  runtime-capabilities.md
docs/rules/: index.md
examples/demo-crewai/: README.md  main.py  requirements.txt
schema/: agentmesh-config.schema.json  drako-config.schema.json
src/agentmesh/: __init__.py  client.py  config.py  exceptions.py  govern.py
src/agentmesh/cli/: bom.py  diff_command.py  discovery.py  history_command.py  init_command.py  main.py  push_command.py  report.py  rollback_command.py  scan_cache.py  scan_command.py  scanner.py  scoring.py  serve_command.py  share.py  status_command.py  upload.py  verify_command.py
src/agentmesh/cli/formats/: __init__.py  badge.py  json_fmt.py  sarif.py
src/agentmesh/cli/policies/: __init__.py  a2a.py  base.py  bestpractices.py  compliance.py  finops.py  governance.py  hooks.py  identity.py  magnitude.py  multiagent.py  operational.py  resilience.py  security.py  versioning.py
src/agentmesh/mcp/: local_server.py
src/agentmesh/middleware/: autogen.py  base.py  crewai.py  langgraph.py
src/agentmesh/utils/: detection.py  logger.py
src/drako/: __init__.py  _governance.py  advisories.py  benchmark.py  client.py  config.py  reachability.py  telemetry.py
src/drako/cli/: _helpers.py  baseline.py  baseline_command.py  bom.py  bom_command.py  comply_command.py  desktop_command.py  diff_command.py  discovery.py  fix_command.py  history_command.py  init_command.py  main.py  nocode_command.py  push_command.py  report.py  rollback_command.py  scan_cache.py  scan_command.py  scanner.py  scoring.py  share.py  simulate_command.py  ts_bom.py  ts_discovery.py  upgrade_command.py  upload.py  validate_command.py
src/drako/cli/formats/: bom_fmt.py  json_fmt.py  sarif.py  scorecard.py
src/drako/cli/policies/: __init__.py  a2a.py  base.py  bestpractices.py  compliance.py  determinism.py  finops.py  governance.py  hooks.py  identity.py  magnitude.py  multiagent.py  operational.py  resilience.py  security.py  vendor_concentration.py  versioning.py
src/drako/comply/: __init__.py  cli.py  mapping.py  questionnaire.py  status.py  storage.py
src/drako/comply/generators/: __init__.py  docx_generator.py  pdf_generator.py
src/drako/comply/templates/: _base.html.j2  article_11_technical_docs.html.j2  article_12_record_keeping.html.j2  article_14_human_oversight.html.j2  article_9_risk_management.html.j2
src/drako/data/: benchmark_dataset.json
src/drako/data/advisories/: DRAKO-ABSS-2026-001.yaml  DRAKO-ABSS-2026-002.yaml  DRAKO-ABSS-2026-003.yaml  DRAKO-ABSS-2026-004.yaml  DRAKO-ABSS-2026-005.yaml  DRAKO-ABSS-2026-006.yaml  DRAKO-ABSS-2026-007.yaml  DRAKO-ABSS-2026-008.yaml  DRAKO-ABSS-2026-009.yaml  DRAKO-ABSS-2026-010.yaml  DRAKO-ABSS-2026-011.yaml  DRAKO-ABSS-2026-012.yaml  DRAKO-ABSS-2026-013.yaml  DRAKO-ABSS-2026-014.yaml  DRAKO-ABSS-2026-015.yaml  DRAKO-ABSS-2026-016.yaml  DRAKO-ABSS-2026-017.yaml  DRAKO-ABSS-2026-018.yaml  DRAKO-ABSS-2026-019.yaml  DRAKO-ABSS-2026-020.yaml  DRAKO-ABSS-2026-021.yaml  DRAKO-ABSS-2026-022.yaml  (+3 more)
src/drako/desktop/: __init__.py  discovery.py  mcp_rules.py
src/drako/mcp/: __main__.py
src/drako/nocode/: __init__.py  cli.py  graph.py  reachability.py  scoring.py
src/drako/proxy/: docker-compose.drako.yml
src/drako/simple/: __init__.py  formatter.py  router.py  rules.py
src/drako/ts_parser/: __init__.py  _compat.py  parser.py
tests/: conftest.py  test_advisories.py  test_baseline.py  test_benchmark.py  test_bom.py  test_bom_command.py  test_cli_bugs.py  test_cli_init.py  test_client.py  test_config.py  test_desktop_discovery.py  test_detection.py  test_determinism_policies.py  test_discovery.py  test_e2e_scan.py  test_formats.py  test_framework_policies.py  test_govern_per_tool.py  test_hooks_config.py  test_hooks_policies.py  test_impact.py  test_middleware_crewai.py  test_middleware_langgraph.py  test_policies_bestpractices.py  test_policies_compliance.py  test_policies_governance.py  test_policies_security.py  test_reachability.py  test_report.py  test_rule_fixtures.py  test_scanner.py  test_scorecard.py  test_scoring.py  test_simulate.py  test_telemetry.py  test_testing_harness.py  test_ts_rule_fixtures.py  test_validate.py  test_vendor_concentration.py  test_versioning_policies.py
tests/comply/: conftest.py  test_disclaimer_present.py  test_generators_docx.py  test_generators_pdf.py  test_mapping.py  test_questionnaire.py  test_status.py
tests/fixtures/autogen_vulnerable/: agents.py  main.py  requirements.txt
tests/fixtures/crewai_basic/: main.py  requirements.txt  tools.py
tests/fixtures/langgraph_clean/: .gitignore  graph.py  requirements.txt  tools.py
tests/fixtures/mixed_framework/: crew_agent.py  graph_agent.py  requirements.txt
tests/nocode/: test_cli.py  test_parsers.py  test_reachability.py  test_rules.py
tests/simple/: test_cli_mutual_exclusion.py  test_formatter.py  test_framework_fixes.py  test_rules_whitelist.py
tools/: ecosystem_queries.yaml  scan_ecosystem.py
tools/framework-monitor/: README.md  config.yaml  monitor.py
tools/framework-ratings/: .gitignore  default_analysis.py  framework_configs.py  rate_frameworks.py  report_generator.py  requirements.txt
tools/framework-ratings/templates/: ratings_page.html
tools/governance-index/: .gitignore  build_index.py  checkpoint.py  dataset_generator.py  github_discovery.py  report_generator.py  requirements.txt  scan_runner.py
tools/mcp-directory/: governance_analyzer.py  manifest_cache.py  mcp_configs.py  report_generator.py  scan_directory.py
tools/threat-intel-sync/: state.json
(+339 files in other folders)
