[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drako"
version = "2.5.2"
description = "The Python Governance Platform for AI Agents — compliance middleware for LangGraph, CrewAI, AutoGen"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Drako", email = "hello@getdrako.com" },
]
keywords = ["ai-governance", "agent-security", "compliance", "eu-ai-act", "langraph", "crewai", "autogen", "dlp", "audit-trail", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.70.0"]
langgraph = ["langgraph>=0.2.0"]
autogen = ["pyautogen>=0.4.0"]
proxy = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]
typescript = [
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
]
all = ["crewai>=0.70.0", "langgraph>=0.2.0", "pyautogen>=0.4.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "coverage>=7.0",
    "hypothesis>=6.100.0",
]

[project.scripts]
drako = "drako.cli.main:cli"

[project.urls]
Homepage = "https://getdrako.com"
Documentation = "https://docs.getdrako.com"
Repository = "https://github.com/agentmesh/drako-python"
Issues = "https://github.com/agentmesh/drako-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/drako"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
# Gradual typing: existing modules are not yet fully typed
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "drako.cli.formats.scorecard",
    "drako.cli.policies.frameworks.*",
]
disallow_any_explicit = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100
